[project]
name = "snmpkit"
version = "0.1.0"
description = "High-performance SNMP toolkit with Rust core - AgentX subagent and SNMP manager"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.14"
dependencies = ["uvloop>=0.21"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-xdist>=3.5", "ruff>=0.9"]

[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
python-source = "python"
module-name = "snmpkit.core"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
